Fix horizontal scroll wrt scroll up panel

--- a/profile-demo/src/Components/OurServices/SlideUpPanelText/SlideUpPanelText.module.css
+++ b/profile-demo/src/Components/OurServices/SlideUpPanelText/SlideUpPanelText.module.css
@@ -1,6 +1,7 @@
 .textNumberContainer{
     display: flex;
     padding: 100px;
+    padding-bottom: 0;
     justify-content: space-between;
     /* align-items: stretch; */
     position: relative;
